# SpacePhysics

./: .gitignore
physics/: CMakeLists.txt  CONTRIBUTING.md  DESIGN.md
physics/src/: CMakeLists.txt  aabb.cc  aabb.h  bvh.cc  bvh.h  bvh_benchmark.cc  bvh_test.cc  c_api.cc  c_api.h  collision_solver.cc  collision_solver.h  collision_solver_benchmark.cc  collision_solver_test.cc  collision_system.cc  collision_system.h  collision_system_benchmark.cc  collision_system_test.cc  collision_world.cc  collision_world.h  collision_world_benchmark.cc  collision_world_test.cc  component_data.cc  component_data.h  debug.h  frame.h  frame_solver.cc  frame_solver.h  frame_solver_test.cc  glue_system.cc  glue_system.h  interval_tree.cc  interval_tree.h  interval_tree_benchmark.cc  interval_tree_test.cc  layer_matrix.cc  layer_matrix.h  motion_system.cc  motion_system.h  motion_system_test.cc  orbit_system.cc  (+11 more)
physics/src/dsa/: CMakeLists.txt  interval_tree.cc  interval_tree.h  interval_tree_benchmark.cc  interval_tree_test.cc
physics/src/geometry/: CMakeLists.txt  aabb.cc  aabb.h  bvh.cc  bvh.h  bvh_benchmark.cc  bvh_test.cc  float.h  layer_matrix.cc  quaternion.cc  quaternion.h  quaternion_test.cc  vector3.cc  vector3.h
physics/src/systems/: CMakeLists.txt  collision_detector.cc  collision_detector.h  collision_detector_benchmark.cc  collision_detector_test.cc  collision_rule_set.cc  collision_rule_set.h  collision_rule_set_test.cc  collision_system.cc  collision_system.h  collision_system_benchmark.cc  collision_system_test.cc  component_data.cc  component_data.h  event_effects.cc  event_effects.h  glue_system.cc  glue_system.h  kepler.cc  kepler.h  motion.cc  motion.h  motion_system.cc  motion_system.h  motion_system_test.cc  motion_test.cc  object_pool.cc  object_pool.h  object_pool_test.cc  orbit_system.h  rocket.cc  rocket.h  rocket_test.cc  rules.cc  rules.h  rules_test.cc
physics/src/test_matchers/: CMakeLists.txt  events.h  quaternion.h  vector3.h
physics/src/types/: CMakeLists.txt  entity.h  events.cc  events.h  frame.cc  frame.h  optional_components.cc  optional_components.h  required_components.cc  required_components.h
